--- a/learningAPI/css/style.css
+++ b/learningAPI/css/style.css
@@ -4,14 +4,17 @@ body{
 }
 
 header{
-    color: #FAAF1A;
+    color: #2f4f4f;
     text-align: center;
 }
 .titleBox{
-    margin: auto;
+    margin-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
     width: 420px;
     border-radius: 5px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.325);
+    background-color: #FAAF1A;
 }
 
 .quoteContainer {
